# Urdu-Arabic-Text-Recognition-AI-Tool

./: .gitignore  Glyphs.txt  README.md  create_lmdb_dataset.py  dataset.py  model.py  pyproject.toml  read.py  test.py  train.py  utils.py
modules/: augmentation.py  dropout_layer.py  feature_extraction.py  sequence_modeling.py
modules/cnn/: hrnet.py
